# Jeff-Interpreted-Language-JIL-

./: .gitignore  Add.h  CMakeLists.txt  DataTypes.h  Defines.h  Interpreter.cpp  Interpreter.sln  Interpreter.vcxproj  Interpreter.vcxproj.filters  JILInterpreter  JeffFile.h  LICENSE  Lexy.cpp  Lexy.h  Meat.cpp  Meat.h  Potatoes.cpp  Potatoes.h  README.md  Tokenizer.cpp  Tokenizer.h  Utils.h
BuildScripts/MinGW/: CMakeLists.txt
BuildScripts/Unix/: BuildUnix.sh
BuildScripts/VisualStudio2019/: CMakeLists.txt
FileReading/: JeffFile.cpp  JeffFile.h
Meat/: KeywordHandler.cpp  KeywordHandler.h  Lexy.cpp  Lexy.h  Meat.cpp  Meat.h
Potatoes/: Potatoes.cpp  Potatoes.h  Tokenizer.cpp  Tokenizer.h
Scripts/: testJeffFile.jil
StoreForLater/: Function.h  FunctionTable.cpp  FunctionTable.h  Heap.h  Stack.h
Utils/: CommonIncludes.h  DataTypes.h  Defines.h  Utils.cpp  Utils.h
